syntax = "proto3";

package cof.dice_api.v1;

import "cof/common/dice/v1/dice.proto";

// DiceService
service DiceService {
  // RollDices
  rpc RollDices(RollDicesRequest) returns (RollDicesResponse);

  // GetDiceRoll
  rpc GetDiceRoll(GetDiceRollRequest) returns (GetDiceRollResponse);
}

// RollDicesRequest
message RollDicesRequest {
  // dices
  repeated common.dice.v1.DiceType dices = 1;
}

// RollDicesResponse
message RollDicesResponse {
  // id
  string id = 1;
  // rolled_dices
  repeated common.dice.v1.RolledDice rolled_dices = 2;
}

// GetDiceRollRequest
message GetDiceRollRequest {
  // id
  string id = 1;
}

// GetDiceRollResponse
message GetDiceRollResponse {
  // id
  string id = 1;
  // rolled_dices
  repeated common.dice.v1.RolledDice rolled_dices = 2;
}
